<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movies</string>
    <string name="app_id">1078772335971</string>

    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_play">Now Playing</string>
    <string name="up_coming">Up Coming</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="user">User</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_act">Create Account</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="send_password_reset_email">Send password reset email</string>

    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>
    <string name="reset">Sign up</string>


    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind the best movies</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>


    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Sign up</string>
    <string name="forgot_password_label">Forgot password</string>
    <string name="submit_label">Submit</string>
    <string name="logout_btn_label">Logout</string>
    <string name="member_id_card_label">Member ID Card</string>


    <string name="login_label">" Login"</string>
    <string name="signup_label">" Sign up"</string>

    <string name="login_fb_btn_label">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="signup_fb_btn_label">"{faw-facebook-f}    Sign up with Facebook"</string>

    <string name="login_google_btn_label">"Login with Google"</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>


    <string name="action_retry">Retry</string>
    <string name="action_top_rated">Top rated</string>
    <string name="action_now_playing">Now playing</string>
    <string name="action_popular">Popular</string>
    <string name="action_sort_by">Sort by</string>
    <string name="movie_backdrop_content_description">Movie backdropPath</string>
    <string name="movie_poster">Movie poster</string>
    <string name="label_overview">Overview</string>
    <string name="release_date">Release date</string>
    <string name="label_votes">%s votes</string>
    <string name="action_share">Share trailer</string>
    <string name="action_favorite">Add to favorites</string>
    <string name="action_remove_from_favorites">Delete from favorites</string>
    <string name="movie_added_successfully">Movie added to your favorites successfully</string>
    <string name="movie_removed_successfully">Movie removed from your favorites successfully</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="play_icon">Play icon</string>
    <string name="trailer_thumbnail">Trailer thumbnail</string>
    <string name="cast">The Cast</string>
    <string name="trailers">Trailers</string>
    <string name="user_reviews">User Reviews</string>
    <string name="language">Language</string>
    <string name="bottom_navigation_border">Bottom navigation border</string>
    <string name="no_favorites">Empty. you haven\'t added any movies to your favorites yet!</string>
    <string name="review_author_image">Review author image</string>

    <string name="loading_data" tools:ignore="TypographyEllipsis">Loading data...</string>
    <string name="error_retry" tools:ignore="TypographyEllipsis">ERROR !! Tap to retry.</string>
    <string name="successfully" tools:ignore="TypographyEllipsis">Successfully load data</string>

    <string name="text_book" tools:ignore="TypographyEllipsis">Book</string>


</resources>