<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_menu">
        <item android:id="@+id/nav_action_movie"
            android:icon="@drawable/ic_movie"
            android:textColor="@color/color_text_title"
            android:textAppearance="@style/EditTextStyle"
            android:title="@string/movies" />
        <item android:id="@+id/nav_action_tv_show"
            android:icon="@drawable/ic_tv_show"
            android:textColor="@color/color_text_title"
            android:textAppearance="@style/EditTextStyle"
            android:title="@string/tv_shows" />
        <item android:id="@+id/nav_action_favorite"
            android:icon="@drawable/ic_favorite"
            android:textColor="@color/color_text_title"
            android:textAppearance="@style/EditTextStyle"
            android:title="@string/favorites" />
    </group>

    <group>
        <item
            android:id="@+id/nav_action_log_out"
            android:textColor="@color/color_text_title"
            android:textAppearance="@style/EditTextStyle"
            android:title="@string/logout_btn_label"/>
    </group>


</menu>