<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/classic_darkTheme_colorBackground">

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            style="@style/LabelStyle"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="135dp"
            android:text="@string/splash_welcome_txt"
            android:textColor="@color/text_light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_login"
                style="@style/StrokeButtonStyle"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="50dp"
                android:minWidth="@dimen/splash_btn_width"
                android:onClick="login"
                android:text="@string/login_btn_label"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_get_started"
                style="@style/SolidButtonStyle"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:minWidth="@dimen/splash_btn_width"

                android:text="@string/get_started_btn_label"
                android:textColor="@color/classic_darkTheme_colorBackground"
                android:textSize="14sp" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/splashBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/splash_bg" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
