<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textview_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/first_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                app:msrv_gravity="start"
                app:msrv_ms_per_inch="@dimen/normal_speed"
                app:msrv_snap_count="1"
                tools:layout_editor_absoluteY="220dp" />

            <TextView
                android:id="@+id/textview_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_play"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="414dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/second_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                app:msrv_gravity="center"
                app:msrv_ms_per_inch="@dimen/low_speed"
                app:msrv_snap_count="2"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="436dp" />

            <TextView
                android:id="@+id/textview_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="414dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/third_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                app:msrv_gravity="center"
                app:msrv_ms_per_inch="@dimen/low_speed"
                app:msrv_snap_count="2"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="436dp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="ERROR !! Tap to retry."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
